fix modal z-index

--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@
 .navigation {
   position: absolute;
   margin-top: 25px;
-  z-index: 1000;
+  z-index: 1001
 }
 
 .navigation_left {
@@ -107,7 +107,7 @@
   }
 }
   
-@media (max-width: 1000px) {
+@media (max-width: 1001x) {
   .table_of_contents {
     display: none;
   }
@@ -226,7 +226,7 @@ h2 {
   margin-bottom: -5px;
   top: 4px;
   background: white;
-  z-index: 1000;
+  z-index: 1001
 }
 
 h3 {
@@ -315,7 +315,7 @@ pre {
   left: 0;
   width: 0%;
   height: 5px;
-  z-index: 1000;
+  z-index: 1001
 }
 
 .side_menu {
@@ -373,7 +373,7 @@ pre {
   /* Hidden by default */
   position: fixed;
   /* Stay in place */
-  z-index: 2;
+  z-index: 9999;
   /* Sit on top */
   padding-top: 100px;
   /* Location of the box */
